# bible-pptx

./: .gitignore  README.md  convert.py  convert_combo.py  convert_cut.py  pyproject.toml  requirements.txt  新約目錄.txt  舊約目錄.txt
bible/: __init__.py  bible_book_list.py  bible_html_downloader.py  bible_html_merge.py  bible_html_to_csv.py
data/: new_testment.txt  old_testment.txt
data/csv/: 1_Chronicles_1.csv  1_Chronicles_14.csv  1_Chronicles_16.csv  1_Chronicles_18.csv  1_Chronicles_19.csv  1_Chronicles_2.csv  1_Chronicles_22.csv  1_Chronicles_24.csv  1_Chronicles_3.csv  1_Chronicles_6.csv  1_Chronicles_7.csv  1_Chronicles_9.csv  1_Corinthians_1.csv  1_Corinthians_10.csv  1_Corinthians_12.csv  1_Corinthians_2.csv  1_Corinthians_3.csv  1_Corinthians_7.csv  1_Corinthians_8.csv  1_John_1.csv  1_John_4.csv  1_Kings_1.csv  1_Kings_10.csv  1_Kings_11.csv  1_Kings_12.csv  1_Kings_16.csv  1_Kings_18.csv  1_Kings_21.csv  1_Kings_3.csv  1_Kings_5.csv  1_Kings_6.csv  1_Kings_7.csv  1_Kings_8.csv  1_Kings_9.csv  1_Maccabees_10.csv  1_Maccabees_11.csv  1_Maccabees_12.csv  1_Maccabees_14.csv  1_Maccabees_15.csv  1_Maccabees_16.csv  (+606 more)
data/templates/: blue-sky-16-9.pptx  cross-light.pptx  cross-olive.pptx  dove-paper-16-9.pptx  gold-cloud-16-9.pptx  pale-dove.pptx  simple.pptx  template-blue-sky.pptx  template-cross.pptx  template-dark.pptx  template-simple.pptx  template.pptx
data/templates_combo/: simple.pptx
data/text/: cus.txt  cut.txt
java/translate/: pom.xml
scripts/: __init__.py  bible_csv_to_pptx.py  bible_html_downloader.py  bible_html_to_csv.py
(+2697 files in other folders)
