[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bible-pptx"
version = "0.1.0"
description = "Bible text to PowerPoint (pptx) conversion"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "python-pptx>=0.6.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bible*"]
